# mid-term-pp

./: .gitignore  BigramGenerator.cpp  CMakeLists.txt  main.cpp  plot_script.py  plot_script_2.py
data/: corpus_10000.txt  corpus_100000.txt
